[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "llm_audit"
version = "0.0.2"
authors = [
  { name="Diratof Azdimarlow", email="ouoeio@eui.pu" },
]
description = "A small script that uses g4f module for audit code from CLI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["g4f"]

[project.urls]
Homepage = "https://github.com/TheSaintDiratof/llm_audit"
Issues = "https://github.com/TheSaintDiratof/llm_audit"
